dh-python (1.20130913-1) UNRELEASED; urgency=low

  * dh_py*: add --requires option

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 06 Sep 2013 20:27:05 +0200

dh-python (1.20130903-1) unstable; urgency=low

  * dh_python2, dh_python3, dh_pypy:
    - do not rename extensions in directories that include architecture triplet
      as part of the path (closes: 721696)
    - add --no-ext-rename option

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 03 Sep 2013 20:20:43 +0200

dh-python (1.20130902-1) unstable; urgency=low

  * Fix DESTDIR guessing (from --name) for non-default interpreter versions
  * Add {package} to supported variables in command templates

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 02 Sep 2013 18:22:14 +0200

dh-python (1.20130901-1) unstable; urgency=low

  [ Dmitrijs Ledkovs ]
  * Fix pybuild.pm when PYBUILD_INTERPRETERS is set
    (broken in previous upload, closes: #720744)
  * Bump doctests s/3.2/3.3/

  [ Piotr Ożarowski ]
  * Add Barry Warsaw to co-maintainers
  * pybuild:
    - mention {version.major} and {version.minor} in pybuild's manpage
      (closes: 721068)
    - add --test-tox option (PYBUILD_TEST_TOX=1 works too, like with
      other pybuild options), closes: 721067
    - set https_proxy to 127.0.0.1 if it's not set (similar to http_proxy)
    - distutils build plugin: use default interpreter symlink in install step
      (if interpreter version matches the default one) - this will force
      distutils to not hardcode interpreter version in shebangs
    - fix problem with relative paths when dh's --sourcedirectory is used
    - add --name (PYBUILD_NAME) option
  * dh_python{2,3} and dh_pypy: generate "interpreter (>= X.Y),
    interpreter (<< X.Z)" dependency if private directory contains extensions
    even if there are no .py files inside (closes: 720258)
  * Disable two tests in test201 dir if /usr/bin/python2.6 is not available
  * Replace python-docutils build dependency with python3-docutils (both
    provide rst2man)
